--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,15 @@
   h1 {
     @apply text-4xl font-bold;
   }
+  h2 {
+    @apply text-3xl font-semibold;
+  }
+  h4 {
+    @apply text-2xl font-semibold
+  }
+  p {
+    @apply text-xl
+  }
 }
 
 body {
