--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,12 @@
   h4 {
     @apply text-2xl font-semibold
   }
+  h5 {
+    @apply text-xl font-semibold
+  }
+  h6 {
+    @apply text-lg font-medium
+  }
   p {
     @apply text-xl
   }
